src/objects/State_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Attorney_Witness_Requirements__c</fullName>
        <description>Any requirements for attorneys to be with the witness? What can/can’t attorneys stipulate on this topic?</description>
        <label>Attorney Witness Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLE_Expiration_Date__c</fullName>
        <label>CLE Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLE_Rules__c</fullName>
        <label>CLE - Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLE_Self_Reporting_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CLE - Self Reporting State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_Certification__c</fullName>
        <description>Is state certification required for court reporting firms?</description>
        <label>Firm Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firm_Contracting__c</fullName>
        <description>Are there rules regarding contracting?</description>
        <label>Firm Contracting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firm_Regulations__c</fullName>
        <description>Any other relevant rules, regulations, or statutes in this state? Mandatory formatting?</description>
        <label>Firm Regulations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formatting_Rules__c</fullName>
        <label>Formatting Rules</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Read_and_Sign_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Read and Sign Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Read_and_Sign_Rules__c</fullName>
        <label>Read and Sign Rules</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remote_Online_Notarization_Allowed__c</fullName>
        <label>Remote Online Notarization Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Legislation pending</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remote_Online_Notarization_Details__c</fullName>
        <label>Remote Online Notarization Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remote_Reporters_Allowed_In_State__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Remote Reporters Allowed In State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Reporters_Allowed_Out_Of_State__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Remote Reporters Allowed Out Of State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporter_Certification__c</fullName>
        <description>Is state certification required for court reporters? If so, what? What obligations do reporters have? In what circumstances can non-certified reporters take depos?</description>
        <label>Reporter Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporter_Methods__c</fullName>
        <description>Can non-stenographic methods be used to make the record? In those circumstances, what other responsibilities does that person have?</description>
        <label>Reporter Methods</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporter_Swearing_and_Oath__c</fullName>
        <description>Are there rules related to swearing in and notarizing witness? Can the oath be administered remotely? Who can swear in a witness?</description>
        <label>Reporter Swearing and Oath</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporter_Witness_Requirements__c</fullName>
        <description>Are reporters required to be with the witness? Can reporters swear in the witness remotely? If so, how?</description>
        <label>Reporter Witness Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rules_for_Non_Steno_Staff__c</fullName>
        <description>Any relevant statutes for transcriptionists or proofreaders?</description>
        <label>Rules for Non-Steno Staff</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>State Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rule__c</columns>
        <columns>Read_and_Sign_Required__c</columns>
        <columns>Read_and_Sign_Rules__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Still_Needed</fullName>
        <columns>NAME</columns>
        <columns>Attorney_Witness_Requirements__c</columns>
        <columns>Firm_Certification__c</columns>
        <columns>Firm_Contracting__c</columns>
        <columns>Firm_Regulations__c</columns>
        <columns>Reporter_Certification__c</columns>
        <columns>Reporter_Methods__c</columns>
        <columns>Reporter_Swearing_and_Oath__c</columns>
        <columns>Reporter_Witness_Requirements__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_ACTIVITY</field>
            <operation>equals</operation>
        </filters>
        <label>Still Needed</label>
    </listViews>
    <nameField>
        <label>State Rules</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>State Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_New_States</fullName>
        <active>false</active>
        <description>No need to create a new state rule record. All 50 states have been created.</description>
        <errorConditionFormula>ISNEW()</errorConditionFormula>
        <errorMessage>No need to create a new state rules record. Please edit one of the existing states.</errorMessage>
    </validationRules>
</CustomObject>